--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,100 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link href="public/main.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <script src="public/main.js"></script>
+
 </head>
+
 <body>
-    <h2>Hello World</h2>
+    <div class="banner">
+        <div class="row">
+            <div class="col-md-12 text-center mt-4">
+                <h2>Jump-cut Final Challenge</h2>
+            </div>
+            <div class="col-md-12" id="activator">
+                <div class="container">
+                    <div class="row text-left">
+                        <div class="col-md-4 mb-4">
+                            <input type="button" class="btn btn-success" value="Activate Fibonacci" onclick="activate(0)">
+                        </div>
+                        <div class="col-md-8"><span class="example">1,1,2,3,5,8,13,21...</span></div>
+                        <hr>
+
+                        <div class="col-md-4 mb-4">
+                            <input type="button" class="btn btn-success" value="Activate Factorial" onclick="activate(1)">
+                        </div>
+                        <div class="col-md-8"><span class="example">1,1,2,6,24,120,720...</span></div>
+
+                        <div class="col-md-4 mb-4">
+                            <input type="button" class="btn btn-success" value="Activate Range Sequence" onclick="togglePanel('rangepanel');">
+                        </div>
+                        <div class="col-md-8"><span class="example">(1,2) => 1,3,5,7,9,11,13...</span></div>
+                        <hr>
+                        <div class="col-md-12 mb-4" id="rangepanel" class="tpanel">
+                            <div class="row pb-4 pt-4">
+                                <div class="col-md-6">
+                                    <label>Initial Value</label>&nbsp;&nbsp;<input type="number" id="initialvalue"
+                                        placeholder="Enter initial value" class="form-control"><br>
+
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Step Value</label>&nbsp;&nbsp;<input type="number" id="step" placeholder="Enter step value"
+                                        class="form-control">
+                                </div>
+                                <div class="col-md-12">
+                                    <input type="button" class="btn btn-success" value="Activate with Params" onclick=activate(2)>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <input type="button" class="btn btn-success" value="Activate Partial Sum Sequence" onclick="togglePanel('partialpanel');">
+                        </div>
+                        <div class="col-md-8"><span class="example">(3,5,6,3,0)=>3,8,14,17,17</span></div>
+                        <hr>
+                        <div class="col-md-12 mb-4" id="partialpanel" class="tpanel">
+                            <div class="row pb-4 pt-4">
+                                <div class="col-md-12">
+                                    <label>Values</label>&nbsp;&nbsp;<input type="number" id="values"
+                                        placeholder="Enter set of values like 1,2,3,4" class="form-control"><br>
+                                </div>
+                                <div class="col-md-12">
+                                    <input type="button" class="btn btn-success" value="Activate with Params" onclick=activate(3)>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <input type="button" class="btn btn-success" value="Activate Prime Sequence" onclick="activate(4)">
+                        </div>
+                        <div class="col-md-8"><span class="example">2,3,5,7,11,13,17...</span></div>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <img src="public/abc.gif" class="rocket">
+            <div class="col-md-12 text-center" id="activated">
+                <h2 class="display-1">Activated Successfully !</h2>
+                <input type="button" onclick="next()" class="btn btn-lg btn-success" value="Get Next Value"><br>
+                <span class="output"></span>
+            </div>
+            
+        </div>
+    </div>
 </body>
+
 </html>
