--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                         <div class="col-md-12 mb-4" id="partialpanel" class="tpanel">
                             <div class="row pb-4 pt-4">
                                 <div class="col-md-12">
-                                    <label>Values</label>&nbsp;&nbsp;<input type="number" id="values"
+                                    <label>Values</label>&nbsp;&nbsp;<input type="text" id="values"
                                         placeholder="Enter set of values like 1,2,3,4" class="form-control"><br>
                                 </div>
                                 <div class="col-md-12">
